--- a/public/locales/ar/mainpage.json
+++ b/public/locales/ar/mainpage.json
@@ -6,7 +6,7 @@
   },
   "amenities": {
     "playroom": "دع الأطفال يضحكون ويلعبون — غرفة ألعاب آمنة ومليئة بالألوان مصممة للمرح والخيال.",
-    "sauna": "استرخِ في الساونا — تخلص من السموم، واسترخِ، ودع الدفء يذيب توترك.",
+    "sauna": "خذ قسطاً من الراحة في الحديقة – قهوة في الصباح، وهدوء الجبال، ومساحة تهدئ أفكارك.",
     "jacuzzi": "استمتع بأقصى درجات الراحة — الجاكوزي الفاخر لدينا يدعوك للراحة والاسترخاء مع إطلالات خلابة على الجبال.",
     "lounge": "استرخِ وتواصل في صالة أنيقة — مجهزة ببار مجاني لتستمتع بمشروبك المفضل في أي وقت.",
     "alt1": "غرفة ألعاب للأطفال",
