--- a/public/locales/ar/offer.json
+++ b/public/locales/ar/offer.json
@@ -5,7 +5,7 @@
     "nav": { "prev": "السابق", "next": "التالي" },
     "items": [
       { "text": "دع الأطفال يضحكون ويلعبون — غرفة ألعاب آمنة ومفعمة بالألوان صُممت للمرح والخيال.", "alt": "غرفة ألعاب للأطفال" },
-      { "text": "استرخِ في الساونا — تخلّص من السموم واهدأ ودع الدفء يذيب توترك.", "alt": "غرفة الساونا" },
+      { "text": "خذ قسطاً من الراحة في الحديقة – قهوة في الصباح، وهدوء الجبال، ومساحة تهدئ أفكارك." ,"alt":"حديقة"},
       { "text": "انغمس في أقصى درجات الاسترخاء — يدعوك الجاكوزي الفاخر للاسترخاء والاستمتاع بإطلالات الجبال.", "alt": "منطقة الجاكوزي" },
       { "text": "استرخِ وتواصل في صالة أنيقة — مع بار مجاني لتستمتع بمشروباتك المفضلة في أي وقت.", "alt": "صالة أنيقة" },
       { "text": "إنترنت سريع وموثوق في جميع أنحاء الفيلا.", "alt": "إنترنت عالي السرعة" },
