--- a/public/locales/en/mainpage.json
+++ b/public/locales/en/mainpage.json
@@ -6,7 +6,7 @@
   },
   "amenities": {
     "playroom": "Let little ones laugh and play — a vibrant, safe playroom designed for fun and imagination.",
-    "sauna": "Revitalize in the sauna — detox, relax, and feel the warmth melt your tension away.",
+    "sauna": "Take a breather in the garden – coffee in the morning, the silence of the mountains and space that calms your thoughts.",
     "jacuzzi": "Indulge in the ultimate relaxation — our luxurious jacuzzi invites you to soak, unwind, and enjoy mountain views in total comfort.",
     "lounge": "Relax and socialize in our elegant lounge — complete with a complimentary bar for you to enjoy your favorite drinks, anytime.",
     "alt1": "Children’s playroom",
