--- a/public/locales/pl/mainpage.json
+++ b/public/locales/pl/mainpage.json
@@ -6,7 +6,7 @@
   },
   "amenities": {
     "playroom": "Pozwól najmłodszym śmiać się i bawić — kolorowy, bezpieczny pokój zabaw stworzony dla radości i wyobraźni.",
-    "sauna": "Zrelaksuj się w saunie — oczyść ciało, odpręż się i poczuj, jak ciepło usuwa całe napięcie.",
+    "sauna": "Odetchnij w ogrodzie — kawa o poranku, cisza gór i przestrzeń, która uspokaja myśli.",
     "jacuzzi": "Zanurz się w luksusie — nasze jacuzzi zaprasza do pełnego relaksu z widokiem na góry.",
     "lounge": "Odpocznij i porozmawiaj w eleganckim salonie — z barem samoobsługowym, byś mógł cieszyć się ulubionym napojem o każdej porze.",
     "alt1": "Pokój zabaw dla dzieci",
