--- a/public/locales/pl/offer.json
+++ b/public/locales/pl/offer.json
@@ -5,7 +5,7 @@
     "nav": { "prev": "Poprzedni", "next": "Następny" },
     "items": [
       { "text": "Pozwól najmłodszym śmiać się i bawić — kolorowy, bezpieczny pokój zabaw stworzony dla radości i wyobraźni.", "alt": "Pokój zabaw dla dzieci" },
-      { "text": "Zrelaksuj się w saunie — oczyść ciało, odpręż się i poczuj, jak ciepło usuwa napięcie.", "alt": "Sauna" },
+      { "text": "Odetchnij w ogrodzie — kawa o poranku, cisza gór i przestrzeń, która uspokaja myśli.", "alt": "Ogród" },
       { "text": "Zanurz się w pełnym relaksie — nasze luksusowe jacuzzi zaprasza do odpoczynku z widokiem na góry.", "alt": "Strefa jacuzzi" },
       { "text": "Odpocznij i porozmawiaj w eleganckim salonie — z barem samoobsługowym, abyś mógł cieszyć się ulubionym napojem o każdej porze.", "alt": "Elegancki salon" },
       { "text": "Szybki i niezawodny internet w całej willi.", "alt": "Szybki internet" },
