--- a/public/locales/en/offer.json
+++ b/public/locales/en/offer.json
@@ -5,7 +5,7 @@
     "nav": { "prev": "Previous", "next": "Next" },
     "items": [
       { "text": "Let little ones laugh and play — a vibrant, safe playroom designed for fun and imagination.", "alt": "Children’s playroom" },
-      { "text": "Revitalize in the sauna — detox, relax, and feel the warmth melt your tension away.", "alt": "Sauna room" },
+      { "text": "Take a breather in the garden – coffee in the morning, the silence of the mountains and space that calms your thoughts.", "alt": "Garden and mountain view." },
       { "text": "Indulge in the ultimate relaxation — our luxurious jacuzzi invites you to soak, unwind, and enjoy mountain views in total comfort.", "alt": "Jacuzzi area" },
       { "text": "Relax and socialize in our elegant lounge — complete with a complimentary bar for you to enjoy your favorite drinks, anytime.", "alt": "Elegant lounge" },
       { "text": "Fast and reliable internet throughout the villa.", "alt": "High-speed internet" },
